Updated rapidoc options

--- a/rapidoc-rng.html
+++ b/rapidoc-rng.html
@@ -7,7 +7,7 @@
 <body>
   <rapi-doc 
     spec-url="https://raw.githubusercontent.com/cbolsen/s2s-rng-api/main/reference/s2s-rng-api.v1.0.yaml" 
-	render-style="read"
+	render-style="view"
 	allow-authentication="false"
 	allow-spec-url-load="false"
 	allow-server-selection="false"
